# video-transcript-extractor

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
tests/: __init__.py  conftest.py  test_cli.py  test_diarizer.py  test_extractor.py  test_formatter.py  test_helpers.py  test_language_detect.py  test_logger.py  test_media_handler.py  test_progress.py  test_redis_cache.py  test_settings.py  test_transcriber.py  test_writer.py
vidscript/: __init__.py  __version__.py  cli.py
vidscript/cache/: __init__.py  redis_cache.py
vidscript/config/: __init__.py  settings.py
vidscript/core/: __init__.py  diarizer.py  extractor.py  language_detect.py  media_handler.py  transcriber.py
vidscript/output/: __init__.py  formatter.py  writer.py
vidscript/utils/: __init__.py  helpers.py  logger.py  progress.py
